--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugiat
+      amet ut temporibus illo! Consectetur natus provident sunt! Quasi rem
+      tempora perferendis eaque autem nobis quisquam itaque, repudiandae dolorem
+      provident?
+    </p>
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
